# uppyyl-simulator

./: .gitignore  LICENSE  pyproject.toml  setup.py
uppyyl_simulator/backend/ast/parsers/: uppaal_xml_model_parser.py
uppyyl_simulator/backend/models/ta/: ta.py
uppyyl_simulator/backend/simulator/: simulator.py
